added footer changes

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -67,7 +67,7 @@
             font-size: 24px
         .signature
           img
-            max-height: 66px
+            max-height: 120px
       .form-hold
         border-radius: 30px
         .form-row
@@ -108,6 +108,14 @@
       .footer
         padding: 40px 0
         line-height: 1.4
+        flex-direction: column
+        text-align: center
+        .wrap-img
+          margin-bottom: 30px
+        .wrap-text
+          padding: 0 20px
+          h4
+            margin-bottom: 5px
 
 
 /* Small Devices, Tablets */
@@ -122,7 +130,7 @@
             font-size: 18px
         .signature
           img
-            max-height: 52px
+            max-height: 80px
       .form-hold
         border-radius: 30px
         .form-row
@@ -147,7 +155,7 @@
 
         .title-section
           flex-direction: column
-          margin-top: 0
+          margin-top: 30px
           .title
             font-size: 14px
             line-height: 1.2
@@ -160,7 +168,7 @@
             margin: 0 auto
             margin-bottom: 20px
             img
-              max-height: 70px
+              max-height: 80px
           .wrap-title
             padding: 0 10px 0 0
             order: 2
