--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -98,7 +98,7 @@ ul
 			justify-content: center
 			flex-direction: column
 			text-align: center
-			margin-top: 10px
+			margin-top: 20px
 			.wrap-title
 				//border-right: 2px solid black
 				direction: rtl
@@ -116,7 +116,7 @@ ul
 				line-height: 1.2
 		.signature
 			img
-				max-height: 85px
+				max-height: 157px
 		.hidden-desctop
 			display: none
 
@@ -360,14 +360,13 @@ ul
 		.signature
 			display: none
 	.footer
-		font-size: 18px
-		font-family: "OpenSansHebrew-Regular"
 		color: rgb(255, 255, 255)
-		line-height: 1.805
 		position: relative
 		margin-top: 80px
-		text-align: center
-		padding: 60px 0
+		padding: 60px 40px 30px
+		display: flex
+		justify-content: space-between
+		align-items: center
 		&:after
 			content: ''
 			position: absolute
@@ -377,6 +376,16 @@ ul
 			height: 2px
 			width: 100px
 			background: white
+		h4
+			direction: rtl
+			font-family: "OpenSansHebrew-Bold"
+			font-size: 20px
+			line-height: 1.2
+		p
+			direction: rtl
+			font-size: 17px
+			font-family: "OpenSansHebrew-Regular"
+			line-height: 1.805
 
 
 
